# bbscript

./: .gitignore  README.md  __init__.py  __main__.py  bbpackage.py  bundled.py  cli.py  errors.py  package_load.py  pyproject.toml  runtime.py  setup_dev.ps1  setup_dev.sh
.github/workflows/: release.yml
blocks/: __init__.py  builtin_blocks.py
core/: __init__.py  block_base.py  events.py  executor.py  loader.py  models.py  registry.py  runner.py  serializer.py  state.py
packaging/: .gitignore  README.md  requirements-build.txt
packaging/homebrew/Formula/: bbscript.rb
packaging/pyinstaller/: bbscript_bundle.spec  run_cli.py
packaging/scripts/: archive_bundle.py  build_release.py
packaging/windows/: BBScript.iss  build_installer.ps1
tests/: test_bbs_executor.py  test_bbs_runner.py  test_bbs_schema.py
