[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bbscript"
version = "0.2.0"
description = "BBScript runtime core and CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ultradeviant", email = "salimov29@gmail.com" }]
keywords = ["bbscript", "runtime", "dag", "automation", "blocks"]
dependencies = [
    "typer>=0.9.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
bbscript = "bbscript.cli:main"

[tool.setuptools]
packages = ["bbscript", "bbscript.core", "bbscript.blocks"]

[tool.setuptools.package-dir]
bbscript = "."
"bbscript.core" = "core"
"bbscript.blocks" = "blocks"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = ["tests"]

